<resources>
    <string name="app_name">Nutrifit</string>
    <string name="started">Let\'s Get Started</string>
    <string name="live_healthy">Live healthy\nwith</string>
    <string name="live_healthy_introduction">Live healthy\nwith Nutrifit</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="dummy_size_100g">100g</string>
    <string name="nutrition_placeholder_in_g">%s g</string>
    <string name="nutrition_placeholder_in_mg">%s mg</string>
    <string name="nutrition_placeholder_in_cal">%s KCal</string>
    <string name="txt_calories">Calories</string>
    <string name="txt_protein">Protein</string>
    <string name="txt_serving_size">Serving Size</string>
    <string name="txt_carbo">Carbohydrates Total</string>
    <string name="txt_fat_total">Fat Total</string>
    <string name="img_desc_info_button">Info button</string>
    <string name="txt_cholesterol">Cholesterol</string>
    <string name="login_content">Nutrition check can be easier and your health\ncan always be maintained</string>
    <string name="introduction_content">Simple, high-class, elegant with easy-to-use tools. Nutrifit is here to help you in checking the nutrition of your food and other supporting features.</string>
    <string name="get_started_content">Take care of your dietary nutrition starting from yourself with Nutrifit.</string>
    <string name="save_profile">Save Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth Date</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="message_save">Are you sure to proceed this data? You can always edit your data in profile.</string>
    <string name="str_result_s">Result : %s</string>
    <string name="txt_zero_in_mg">0mg</string>
    <string name="txt_zero_in_g">0g</string>
    <string name="txt_zero_in_cal">0KCal</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="update_profile_summary">Update your profile here</string>
    <string name="change_language_title">Change Language</string>
    <string name="change_language_summary">Change the application language</string>
    <string name="logout_title">Logout</string>
    <string name="logout_summary">Logout your gmail account</string>
    <string name="logout_message">Are you sure want to logout from Nutrifit?</string>
    <string name="setting">Setting</string>
    <string name="update_profile">Update Profile</string>
    <string name="checking_food_nutrition_made_easy">Checking food nutrition made easy</string>
    <string name="welcome">WELCOME!</string>
    <string name="let_s_check_nour_food_nutrition_here">Let\'s check\nour food nutrition\nhere!</string>
    <string name="what_do_you_want_to_eat_today">What do you want to eat today?</string>
    <string name="upload_your_food_image_here">Upload your food image here!</string>
    <string name="start_your_better_live_journey">Welcome to nutirift. Start your better live journey right now!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_save_profile">Cancel saved profile</string>
    <string name="back">Press again to go back!</string>
    <string name="success_update">You successfully update your profile!</string>
    <string name="success_logout">Successfully logout!</string>
    <string name="cancel_logout">Logout canceled</string>
    <string name="string_you_have_eaten">%s you have eaten:</string>
    <string name="string_more_detail_with_your_food_journey_s">More detail with your food journey %s.</string>
    <string name="string_this_day_you_have_eat_about_s_foods_beverages_nwith_total_calories_is_scal">This day you have eat about %s foods/beverages\nWith total calories is %s KCal</string>
    <string name="string_your_daily_calories_is_s_kcal">Your daily calories is %s KCal</string>
    <string name="remove_menu_history">You remove this menu from history</string>
    <string name="value_serving">This values is total Serving</string>
    <string name="value_calories">This values is total Calories</string>
    <string name="value_carbo">This values is total Carbohydrate</string>
    <string name="value_protein">This values is total Protein</string>
    <string name="value_fat">This values is total Fat</string>
    <string name="value_cholesterol">This values is total Cholesterol</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="cancel">Cancel</string>
    <string name="go_back_home">Go back to home?</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait…</string>
    <string name="tooltip_serving">This is total serving of your food (in grams).</string>
    <string name="tooltip_calories">Calorie is a unit of energy, or the amount of energy obtained from food and/or drink.</string>
    <string name="tooltip_protein">Protein is a macronutrient that is essential to building muscle mass</string>
    <string name="tooltip_carbo">Carbohydrates are the main nutrients, the body needs along with protein and fat.</string>
    <string name="tooltip_fat">Fats are needed as reserve energy for our body.</string>
    <string name="tooltip_cholesterol">Cholesterol is important for making a number of important hormones, including the stress hormone cortisol.</string>
    <string name="max_portion">Maximum portion</string>
    <string name="min_portion">Minimum portion is 1</string>
    <string name="choose_picture">Choose your picture from</string>
    <string name="permission">To use this feature you have to grant the permission!</string>
    <string name="max_reached">Maximum reached</string>
    <string name="havent_eat">You haven\'t eat anything yet?</string>
    <string name="menu_already">This menu %s is already exist</string>
    <string name="change_image">Change Image</string>
    <string name="choose_image">Chosen Image</string>
    <string name="retake_picture">Retake Picture</string>
    <string name="taken_picture">Taken Picture</string>
    <string name="question_retake_picture">Retake the picture?</string>
    <string name="question_change_image">To change the image?</string>
    <string name="close_session">Close this session will delete your list</string>
    <string name="add_list">Add list</string>
    <string name="no_food_detected">No food detected</string>
    <string name="already_listed">Does your foods already listed?</string>
    <string name="no_data_image">No data on image.</string>
    <string name="now_max">Now max</string>
    <string name="food_already_list">%s already exist in list</string>
    <string name="fodd_already_add">You already add %s</string>
    <string name="max_menu_reached">Maximum menu reached</string>
    <string name="total_nutrition">Your nutrition total:</string>
    <string name="serving">Serving</string>
    <string name="calorie">Calorie</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="your_daily_report">Your daily report</string>
    <string name="food_name">FOOD NAME</string>
    <string name="how_much">HOW MUCH</string>
    <string name="time">TIME</string>
    <string name="categories">CATEGORIES</string>
    <string name="total">TOTAL</string>
    <string name="your_nutrition_diagram">Your nutrition diagram:</string>
    <string name="your_daily_nutrition_list">Your Daily Nutrition List</string>
    <string name="you_don_t_have_a_food_history_yet">You don\'t have a food history yet!</string>
    <string name="check">Check</string>
    <string name="retake_image">Retake image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="today">Today</string>
    <string name="yesterday_and_so_on">Yesterday and so on</string>
    <string name="on">On</string>
    <string name="pick">Pick your image first</string>
    <string name="take">Take your picture first</string>
    <string name="dont_save_history">Don\'t save history</string>
    <string name="pick_or_take">Pick or Take another picture</string>
    <string name="add_another_menu">Add Another Menu</string>
    <string name="list_add">List added</string>
</resources>